fix: flexible flex-wrap foote

--- a/style.css
+++ b/style.css
@@ -202,3 +202,15 @@ margin-left: 40px;
     border-bottom: 1px solid #b3b3b3;
   }
 }
+
+@media (max-width: 400px) {
+  .footer-container {
+    height: 130px;
+  }
+  .copyright {
+    margin: 20px 50px 0px;
+  }
+  .school {
+    margin: 10px 50px 20px;
+  }
+}
